# photon-ultra-controller-rp2040

./: .gitignore  Guidelines.md  LICENSE  README.md
PCB/: README.md  fp-lib-table  micromirror-board-controller.kicad_pcb  micromirror-board-controller.kicad_pro  micromirror-board-controller.kicad_sch  sym-lib-table
PCB/board-assets/: openMLA-logo.kicad_mod
PCB/board-outline/: board-outline-bits.dxf  board-outline-holes.dxf  board-outline-stencil-buffer.step  board-outline.FCStd  board-outline.dxf
PCB/production/: micromirror-board-controller-B_Cu.gbr  micromirror-board-controller-B_Mask.gbr  micromirror-board-controller-B_Paste.gbr  micromirror-board-controller-B_Silkscreen.gbr  micromirror-board-controller-Edge_Cuts.gbr  micromirror-board-controller-F_Cu.gbr  micromirror-board-controller-F_Mask.gbr  micromirror-board-controller-F_Paste.gbr  micromirror-board-controller-F_Silkscreen.gbr  micromirror-board-controller-job.gbrjob  micromirror-board-controller.drl
src/: CMakeLists.txt  DLP_pico.c  DLP_pico_alt.c  README.md  configure_controller.py  hsync.pio  image_data_transfer.py  mandelbrot.c  project_patterns.py  pxl.pio  pxl_clk.pio  rgb.pio  setup_communication.py  test_image.c  test_image.h  utils.py  vsync.pio
utils/: gradient_sample_image.tif  grayscale_tiff_to_bytes.py  open_mla_logo_sample_image.tif
